# Cpp20-Modules-getting-started

./: .gitignore  CMakeLists.txt  README.md  client.cpp  my_math.cxx  my_math_imp.cxx  my_math_impl.cxx  speech.cxx  speech_english.cxx  speech_spanish.cxx
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql-analysis.yml
example/: CMakeLists.txt  client.cpp  my_math.cxx  my_math_if.cxx
part1/: CMakeLists.txt  func.cpp  main.cpp
part2/: CMakeLists.txt  func.cxx  main.cpp
part3/: func.cxx  func_impl.cxx
part4/: func.cxx  func_impl.cxx  main.cpp
part5/: func_impl.cxx  main.cpp
part6/: func.cxx  func_impl.cxx  header.h
part7/: CMakeLists.txt  func.cxx  main.cpp
